--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Player Moderno</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div id="player-container">
+    <div id="player-container">
 
     <!-- APPBAR -->
     <div id="appbar">
@@ -72,5 +71,4 @@
 
 <script src="script.js"></script>
 </body>
-
 </html>
