--- a/index.html
+++ b/index.html
@@ -1,73 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
+    <title>Player Moderno — Control por Partes</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="player-container">
+    <iframe id="player-frame" allow="autoplay; encrypted-media" allowfullscreen src="about:blank"></iframe>
 
-    <!-- APPBAR -->
     <div id="appbar">
-      <button id="parts-menu-btn" onclick="toggleMenu()">☰ Partes</button>
-      <div id="title-bar">Cargando título...</div>
-      <!-- <button id="explore-btn" onclick="toggleExplore()">🔍 Explorar</button> -->
-      <button id="search-btn" onclick="toggleSearch()" style="padding: 5px;">🔎 Buscar</button>
-          <!-- PANEL BUSCADOR -->
-<div id="search-panel">
-  <div class="close-btn" onclick="toggleSearch()">✖</div>
-  <input type="text" id="search-input" placeholder="Buscar video..." style="padding:10px; font-size:16px; border:2px solid #ff3d3d; border-radius:6px; background:#000; color:#fff; margin-bottom:15px; width:100%;">
-  <div id="search-results"></div>
-</div>
+        <button id="parts-menu-btn" class="app-btn" title="Partes" onclick="toggleMenu()">☰</button>
+        <div id="title-bar">Cargando título...</div>
+        <div style="display:flex;gap:8px;align-items:center">
+            <button id="explore-btn" class="app-btn" title="Explorar" onclick="toggleExplore()">
+                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m4 12 8-8 8 8M6 10.5V19a1 1 0 0 0 1 1h3v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h3a1 1 0 0 0 1-1v-8.5"/>
+</svg>
 
+            </button>
+            <button id="search-btn" class="app-btn app-btn--accent" title="Buscar" onclick="toggleSearch()">
+                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>
+</svg>
 
+            </button>
+        </div>
     </div>
 
+    <div id="parts-menu" aria-hidden="true"></div>
 
-    <!-- DRAWER PARTES -->
-    <div id="parts-menu">
-      <div class="close-btn" onclick="toggleMenu()">✖</div>
-    </div>
-          <!-- PANEL BUSCADOR -->
-<div id="search-panel">
-  <div class="close-btn" onclick="toggleSearch()">✖</div>
-  <input type="text" id="search-input" placeholder="Buscar video..." style="padding:10px; font-size:16px; border:2px solid #ff3d3d; border-radius:6px; background:#000; color:#fff; margin-bottom:15px; width:100%;">
-  <div id="search-results"></div>
-</div>
-    <!-- PANEL EXPLORAR -->
-    <div id="explore-panel">
-      <div class="close-btn" onclick="toggleExplore()">✖</div>
-      <div id="thumbnails-container"></div>
+    <div id="explore-panel" aria-hidden="true">
+        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
+            <div style="font-weight:700;font-size:18px">Explorar</div>
+            <button class="app-btn" onclick="toggleExplore()">✖</button>
+        </div>
+        <div id="thumbnails-container"></div>
     </div>
 
-    <!-- VIDEO -->
-    <iframe id="ytplayer" allow="autoplay"></iframe>
+    <div id="search-panel" aria-hidden="true">
+        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
+            <div style="font-weight:700;font-size:18px">Buscar</div>
+            <button class="app-btn" onclick="toggleSearch()">✖</button>
+        </div>
+        <input id="search-input" type="text" placeholder="Buscar video..." style="width:100%;padding:12px;border-radius:12px;border:1px solid rgba(255,255,255,0.04);background:rgba(255,255,255,0.02);color:var(--text-light);font-size:15px;margin-bottom:12px" />
+        <div id="search-results"></div>
+    </div>
 
-    <!-- SOUND -->
-    <div id="sound-btn" onclick="enableSound()">🔊 Toca para activar el sonido</div>
+    <div id="tiktok-scroll-container" aria-hidden="false">
+    </div>
 
-    <!-- BOTTOM UI -->
-<div id="bottom-ui">
-  <div id="progress-container"><div id="progress-bar"></div></div>
+    <div id="sound-btn" onclick="enableSound()">🔊 Toca para activar sonido</div>
 
-  <!-- BOTONES VIDEO ANTERIOR/SIGUIENTE -->
-  <div id="video-nav-buttons">
-    <button id="prev-video-btn" style="display: none;">↑ Video anterior</button>
-    <button id="next-video-btn" style="display: none;">↓ Siguiente video</button>
-  </div>
+    <button id="prev-video-btn" title="Anterior Parte/Video" aria-label="Anterior Parte/Video" style="display: none;">◀</button>
+    <button id="next-video-btn" title="Siguiente Parte/Video" aria-label="Siguiente Parte/Video" style="display: none;">▶</button>
 
-  <div id="controls">
-    <button onclick="prevPart()">Anterior</button>
-    <button onclick="back5()">-5s</button>
-    <button onclick="togglePlay()" id="play-btn">⏸ Pausar</button>
-    <button onclick="skip5()">+5s</button>
-    <button onclick="nextPart()">Siguiente</button>
-  </div>
-  <div id="ad-container"></div>
-</div>
-  </div>
+    <div id="bottom-ui">
+        <div class="progress-container"><div id="progress-bar"></div></div>
+        <div class="controls-row" style="justify-content:space-between">
+            <button id="prev-part-mobile" class="control-btn" onclick="prevPart()">◀</button>
+            <button class="control-btn" onclick="back5()"><svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m17 16-4-4 4-4m-6 8-4-4 4-4"/>
+</svg>
+</button>
+            <button id="play-btn" class="control-btn" onclick="togglePlay()">⏸</button>
+            <button class="control-btn" onclick="skip5()">
+                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m7 16 4-4-4-4m6 8 4-4-4-4"/>
+</svg>
+            </button>
+            <button id="next-part-mobile" class="control-btn" onclick="nextPart()">▶</button>
+        </div>
+        <div id="ad-container" aria-hidden="true"></div>
+    </div>
 
 <script src="script.js"></script>
 </body>
