--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
             <div style="font-weight:700;font-size:18px">Explorar</div>
             <button class="app-btn" onclick="toggleExplore()">✖</button>
-        </div>
+        </div>        
         <div id="thumbnails-container"></div>
         <div id="explore-load-more"></div>
+        <div id="explore-ad-container" class="ad-container-panel"></div>
     </div>
     <div id="search-panel" aria-hidden="true">
         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
@@ -74,6 +75,7 @@
         <input id="search-input" type="text" placeholder="Buscar video..." style="width:100%;padding:12px;border-radius:12px;border:1px solid rgba(255,255,255,0.04);background:rgba(255,255,255,0.02);color:var(--text-light);font-size:15px;margin-bottom:12px" />
         <div id="search-results"></div>
         <div id="search-load-more"></div>
+        <div id="search-ad-container" class="ad-container-panel"></div>
     </div>
 
     <div id="tiktok-scroll-container" aria-hidden="true">
