--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Player Moderno — Control por Partes (API Go Paginada)</title>
     <link rel="stylesheet" href="styles.css">
     <style>
